--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Victoria Klausen &ndash; Hjemmeside</title>
+    <title>RJ &ndash; Consulting </title>
     <meta charset="utf-8"> <!-- Bootstrap compiled and minified CSS first, then Font Awesome, then Custom CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="css/Custom.css">
